// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerDetailsHeader /> renders using a complete employer record 1`] = `
Array [
  <div
    className="EmployerDetailsHeader__Title EmployerDetailsHeader__Title--noShort"
  >
    <img
      className="EmployerLogo__Image"
      src="/images/employers/consoto.svg"
      style={
        Object {
          "background": "#fff",
        }
      }
    />
    <h2>
      <a
        onClick={[Function]}
        title=""
      >
        Contoso
      </a>
      <a
        className="EmployerDetailsHeader__Ticker"
        href="https://finance.yahoo.com/quote/CTS"
        rel="noopener noreferrer"
        target="_blank"
        title="Tλè ƭïçƙèř ƨ¥₥βôℓ ôƒ ƭλè è₥ƥℓô¥èè'ƨ ƥúβℓïçℓ¥ ƭřáδèδ ƨƭôçƙ."
      >
        ($
        CTS
        )
      </a>
    </h2>
    [component: EmployerActionLinks employer=([object Object]) /]
    <span
      className="EmployerDetailsHeader__TitleGap"
    />
    [component: EmployerRatingPill employer=([object Object]) isAnnotated=(undefined) /]
  </div>,
  <div
    className="EmployerDetailsHeader__Subtitle"
  >
    <span>
      City, Ûñïƭèδ §ƭáƭèƨ (Multinational)
    </span>
    <span
      title="ÂℓƭèřñáƭïƲè ñá₥èƨ ƒôř ƭλè è₥ƥℓô¥èř, ïñçℓúδïñϱ áℓïáƨèƨ, ƥářèñƭ çô₥ƥáñïèƨ, áñδ çλïℓδ çô₥ƥáñïèƨ."
    >
      <i
        className="material-icons"
      >
        alternate_email
      </i>
      MyContoso
    </span>
    <span
      title="Tλè áƥƥřôжï₥áƭè ñú₥βèř ôƒ è₥ƥℓô¥èèƨ ƭλè çô₥ƥáñ¥ λáδ ƥřïôř ƭô ƭλè ÇôřôñáƲïřúƨ ƥáñδè₥ïç."
    >
      <i
        className="material-icons"
      >
        people
      </i>
      12,345 (2015)
    </span>
    <span
      className="EmployerDetailsHeader__AggregateRatings"
      title="Âϱϱřèϱáƭè çôúñƭƨ ôƒ ƭλè ϱôôδ áñδ βáδ áçƭïôñƨ áñ è₥ƥℓô¥èř λáƨ ƭáƙèñ."
    >
      <span
        className="EmployerDetailsHeader__GoodRatings"
      >
        <i
          className="material-icons"
        >
          add
        </i>
        1
      </span>
      <span
        className="EmployerDetailsHeader__PoorRatings"
      >
        <i
          className="material-icons"
        >
          remove
        </i>
        1
      </span>
    </span>
  </div>,
]
`;

exports[`<EmployerDetailsHeader /> renders without exploding 1`] = `
Array [
  <div
    className="EmployerDetailsHeader__Title EmployerDetailsHeader__Title--noShort"
  >
    <h2>
      <a
        onClick={[Function]}
        title=""
      >
        
      </a>
    </h2>
    [component: EmployerActionLinks employer=([object Object]) /]
    <span
      className="EmployerDetailsHeader__TitleGap"
    />
    [component: EmployerRatingPill employer=([object Object]) isAnnotated=(undefined) /]
  </div>,
  <div
    className="EmployerDetailsHeader__Subtitle"
  >
    <span
      className="EmployerDetailsHeader__AggregateRatings"
      title="Âϱϱřèϱáƭè çôúñƭƨ ôƒ ƭλè ϱôôδ áñδ βáδ áçƭïôñƨ áñ è₥ƥℓô¥èř λáƨ ƭáƙèñ."
    >
      <span
        className="EmployerDetailsHeader__GoodRatings"
      >
        <i
          className="material-icons"
        >
          add
        </i>
        0
      </span>
      <span
        className="EmployerDetailsHeader__PoorRatings"
      >
        <i
          className="material-icons"
        >
          remove
        </i>
        0
      </span>
    </span>
  </div>,
]
`;
